; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_fp.c_qede_realloc_rx_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qede/extr_qede_fp.c_qede_realloc_rx_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qede_rx_queue = type { i64, i32, i32 }
%struct.sw_rx_data = type { i64, i32, i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qede_rx_queue*, %struct.sw_rx_data*)* @qede_realloc_rx_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qede_realloc_rx_buffer(%struct.qede_rx_queue* %0, %struct.sw_rx_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qede_rx_queue*, align 8
  %5 = alloca %struct.sw_rx_data*, align 8
  store %struct.qede_rx_queue* %0, %struct.qede_rx_queue** %4, align 8
  store %struct.sw_rx_data* %1, %struct.sw_rx_data** %5, align 8
  %6 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %7 = getelementptr inbounds %struct.qede_rx_queue, %struct.qede_rx_queue* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %10 = getelementptr inbounds %struct.sw_rx_data, %struct.sw_rx_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %11, %8
  store i64 %12, i64* %10, align 8
  %13 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %14 = getelementptr inbounds %struct.sw_rx_data, %struct.sw_rx_data* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @PAGE_SIZE, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %45

18:                                               ; preds = %2
  %19 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %20 = call i32 @qede_alloc_rx_buffer(%struct.qede_rx_queue* %19, i32 1)
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %18
  %24 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %25 = getelementptr inbounds %struct.qede_rx_queue, %struct.qede_rx_queue* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %28 = getelementptr inbounds %struct.sw_rx_data, %struct.sw_rx_data* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = sub nsw i64 %29, %26
  store i64 %30, i64* %28, align 8
  %31 = load i32, i32* @ENOMEM, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %3, align 4
  br label %54

33:                                               ; preds = %18
  %34 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %35 = getelementptr inbounds %struct.qede_rx_queue, %struct.qede_rx_queue* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %38 = getelementptr inbounds %struct.sw_rx_data, %struct.sw_rx_data* %37, i32 0, i32 2
  %39 = load i32, i32* %38, align 4
  %40 = load i64, i64* @PAGE_SIZE, align 8
  %41 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %42 = getelementptr inbounds %struct.qede_rx_queue, %struct.qede_rx_queue* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @dma_unmap_page(i32 %36, i32 %39, i64 %40, i32 %43)
  br label %53

45:                                               ; preds = %2
  %46 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %47 = getelementptr inbounds %struct.sw_rx_data, %struct.sw_rx_data* %46, i32 0, i32 1
  %48 = load i32, i32* %47, align 8
  %49 = call i32 @page_ref_inc(i32 %48)
  %50 = load %struct.qede_rx_queue*, %struct.qede_rx_queue** %4, align 8
  %51 = load %struct.sw_rx_data*, %struct.sw_rx_data** %5, align 8
  %52 = call i32 @qede_reuse_page(%struct.qede_rx_queue* %50, %struct.sw_rx_data* %51)
  br label %53

53:                                               ; preds = %45, %33
  store i32 0, i32* %3, align 4
  br label %54

54:                                               ; preds = %53, %23
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @qede_alloc_rx_buffer(%struct.qede_rx_queue*, i32) #1

declare dso_local i32 @dma_unmap_page(i32, i32, i64, i32) #1

declare dso_local i32 @page_ref_inc(i32) #1

declare dso_local i32 @qede_reuse_page(%struct.qede_rx_queue*, %struct.sw_rx_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
